<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chatHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/chat_header_min_height"
            android:background="@color/centerColor"
            android:paddingHorizontal="@dimen/space_xl"
            android:paddingTop="@dimen/space_huge"
            android:paddingBottom="@dimen/space_md"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <!-- BACK BUTTON -->
        <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/icon_md"
                android:layout_height="@dimen/icon_md"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- AVATAR PLACEHOLDER -->
        <View
                android:id="@+id/chatAvatar"
                android:layout_width="@dimen/avatar_sm"
                android:layout_height="@dimen/avatar_sm"
                android:background="@drawable/bg_avatar_user_placeholder"
                android:layout_marginStart="@dimen/space_lg"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- CHAT USER NAME -->
        <TextView
                android:id="@+id/tvChatUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_lg"
                android:text="@string/chat_user_placeholder"
                android:textSize="@dimen/text_lg"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintStart_toEndOf="@id/chatAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- MESSAGES -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMessages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/space_md"
            app:layout_constraintTop_toBottomOf="@id/chatHeader"
            app:layout_constraintBottom_toTopOf="@id/messageInputContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!-- MESSAGE INPUT -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/messageInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_md"
            android:padding="@dimen/space_sm_plus"
            android:background="@drawable/bg_message_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <!-- INPUT -->
        <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_md"
                android:hint="@string/chat_message_hint"
                android:background="@null"
                android:padding="@dimen/space_lg"
                android:textSize="@dimen/text_base"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSend"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- SEND BUTTON -->
        <ImageButton
                android:id="@+id/btnSend"
                android:layout_width="@dimen/touch_md"
                android:layout_height="@dimen/touch_md"
                android:src="@drawable/ic_send"
                android:background="@drawable/bg_send_button"
                android:contentDescription="@string/chat_send"
                android:padding="@dimen/space_md"
                app:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>